// Copyright (c) 2024-present,  Teamgram Studio (https://teamgram.net).
//  All rights reserved.
//
// Author: Benqi (wubenqi@gmail.com)
//

syntax = "proto3";

// option java_multiple_files = true;
// option java_package = "com.nebulaim.zproto";
// option java_outer_classname = "ZProtoRpcMetaData";
// option optimize_for = CODE_SIZE;

option go_package = "github.com/teamgram/proto/mtproto/rpc/metadata";

package metadata;

message TakeoutMessageRange {
  int32 min_id = 1;
  int32 max_id = 2;
}

message Takeout {
  int64 id = 1;
  TakeoutMessageRange range = 2;
}

message RpcMetadata {
  string server_id = 1;
  string client_addr = 3;
  int64 auth_id = 4;
  int64 session_id = 5;
  int64 receive_time = 8;

  // 用户ID
  int64 user_id = 11;
  int64 client_msg_id = 12;
  bool is_bot = 13;

  // mtproto
  int32 layer = 14;
  string client = 15;

  // admin
  bool is_admin = 16;

  //    int64 trace_id = 6;
  //    int64 span_id = 7;

  // talkeout
  Takeout takeout = 20;

  // langpack
  string langpack = 21;

  // perm_auth_key_id
  int64 perm_auth_key_id = 22;

  // lang_code
  string lang_code = 23;
}
