/*
 * WARNING! All changes made in this file will be lost!
 * Created from 'scheme.tl' by 'mtprotoc'
 *
 * Copyright (c) 2025-present,  Teamgram Authors.
 *  All rights reserved.
 *
 * Author: Benqi (wubenqi@gmail.com)
 */

syntax = "proto3";

package mtproto;

// import "google/protobuf/wrappers.proto";
import "schema.tl.crc32.proto";

option go_package = "github.com/teamgram/proto/mtproto";

// Bool <--
//  + TL_boolFalse
//  + TL_boolTrue
message Bool {
  string predicate_name = 1;
  TLConstructor constructor = 2;
}

message TL_boolFalse {
  Bool data2 = 1;
}

message TL_boolTrue {
  Bool data2 = 1;
}

// Double <--
//  + TL_double
message Double {
  string predicate_name = 1;
  TLConstructor constructor = 2;
  double v = 3;
}

message TL_double {
  Double data2 = 1;
}

// Error <--
//  + TL_error
message Error {
  string predicate_name = 1;
  TLConstructor constructor = 2;
  int32 code = 3;
  string text = 4;
}

message TL_error {
  Error data2 = 1;
}

// Int32 <--
//  + TL_int32
message Int32 {
  string predicate_name = 1;
  TLConstructor constructor = 2;
  int32 v = 3;
}

message TL_int32 {
  Int32 data2 = 1;
}

// Int64 <--
//  + TL_long
//  + TL_int64
message Int64 {
  string predicate_name = 1;
  TLConstructor constructor = 2;
  int64 v = 3;
}

message TL_long {
  Int64 data2 = 1;
}

message TL_int64 {
  Int64 data2 = 1;
}

// Null <--
//  + TL_null
message Null {
  string predicate_name = 1;
  TLConstructor constructor = 2;
}

message TL_null {
  Null data2 = 1;
}

// String <--
//  + TL_string
message String {
  string predicate_name = 1;
  TLConstructor constructor = 2;
  string v = 3;
}

message TL_string {
  String data2 = 1;
}

// True <--
//  + TL_true
message True {
  string predicate_name = 1;
  TLConstructor constructor = 2;
}

message TL_true {
  True data2 = 1;
}
